--- a/home.html
+++ b/home.html
@@ -15,11 +15,11 @@
             <p>Daniel Mitchell</p>
         </div>
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="websites.html">Websites</a></li>
-            <li><a href="about.html">About Me</a></li>
+            <li><a href="home">Home</a></li>
+            <li><a href="projects">Projects</a></li>
+            <li><a href="links">Links</a></li>
+            <li><a href="websites">Websites</a></li>
+            <li><a href="about">About Me</a></li>
         </ul>
     </nav>
 <div class="centered">
