--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 </div>
 <img id="homeicon" src="Images/icon.png">
 <div class="version">
-    <h3> <a href="updatelog.html" target="_blank" rel="noopener noreferrer">
+    <h3> <a href="updatelog" target="_blank" rel="noopener noreferrer">
         V1.1
     </a>
     </h3>
