--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="Refresh" content="0; url='home.html'" />
+    <meta http-equiv="Refresh" content="0; url='home'" />
 </head>
