--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
 	<title>Daniel | About</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <title>Daniel | About</title>
-	<link rel="canonical" href="https://aboutspark.github.io" />
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="Images/icon3.png">
         <script src="scripts.js">
@@ -13,7 +12,7 @@
     <body>
         <div id="gradient"></div>
         <div id="card">
-            <h2 id="back"><a href="home.html">Click to go back</a></h2>
+            <h2 id="back"><a href="home">Click to go back</a></h2>
             <br><br><br>
             <img src="Images/icon2.png"/>
             <h1><u>Daniel Mitchell</u></h1>
