--- a/links.html
+++ b/links.html
@@ -14,11 +14,11 @@
             <p>Daniel Mitchell</p>
         </div>
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="websites.html">Websites</a></li>
-            <li><a href="about.html">About Me</a></li>
+            <li><a href="home">Home</a></li>
+            <li><a href="projects">Projects</a></li>
+            <li><a href="links">Links</a></li>
+            <li><a href="websites">Websites</a></li>
+            <li><a href="about">About Me</a></li>
         </ul>
     </nav>
     <div class="links">
@@ -34,10 +34,10 @@
                 <h2><a href="https://fortthomas.schoology.com/user/38255229" target="_blank" rel="noopener noreferrer">Schoology</a></h2>
                 </div>
                 <div class="githublink">
-                    <h2><a href="https://github.com/AboutSpark" target="_blank" rel="noopener noreferrer">GitHub</a></h2>
+                    <h2><a href="https://github.com/mitchelldsite" target="_blank" rel="noopener noreferrer">GitHub</a></h2>
                     </div>
                     <div class="version">
-                        <h3> <a href="updatelog.html" target="_blank" rel="noopener noreferrer">
+                        <h3> <a href="updatelog" target="_blank" rel="noopener noreferrer">
                             V1.1
                         </a>
                         </h3>
