--- a/websites.html
+++ b/websites.html
@@ -14,11 +14,11 @@
             <p>Daniel Mitchell</p>
         </div>
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="websites.html">Websites</a></li>
-            <li><a href="about.html">About Me</a></li>
+            <li><a href="home">Home</a></li>
+            <li><a href="projects">Projects</a></li>
+            <li><a href="links">Links</a></li>
+            <li><a href="websites">Websites</a></li>
+            <li><a href="about">About Me</a></li>
         </ul>
     </nav>
     <div class="websitess">
@@ -26,10 +26,10 @@
         </div>
         <img id="aboutsparkimg" src="Images/icon.png">
         <div class="aboutspark">
-            <h2><a href="first.html" target="_blank" rel="noopener noreferrer">First Site</a></h2>
+            <h2><a href="first" target="_blank" rel="noopener noreferrer">First Site</a></h2>
         </div>
         <div class="version">
-            <h3> <a href="updatelog.html" target="_blank" rel="noopener noreferrer">
+            <h3> <a href="updatelog" target="_blank" rel="noopener noreferrer">
                 V1.1
             </a>
             </h3>
