--- a/updatelog.html
+++ b/updatelog.html
@@ -19,7 +19,7 @@ V1.0 (Daniel's Website): Creation of the website (Home, Projects, Links, About M
 
 V1.1 (The Pretty Scary Update): Moved websites.html to the navigation bar, Added update log, better animations, increased quality of images, increased background loading time, and bug fixes.
 
-V1.2 (Redstone Update): Revamped Links Tab, increased loading speed by reducing file sizes, fixed background not fitting screen size, removed schoology from links, </textarea>
+V1.2 (Redstone Update): Revamped Links Tab, increased loading speed by reducing file sizes, fixed background not fitting screen size, removed schoology from links</textarea>
             </form>      
         </div>
 </body>
