--- a/updatelog.html
+++ b/updatelog.html
@@ -19,9 +19,9 @@ V1.0 (Daniel's Website): Creation of the website (Home, Projects, Links, About M
 
 V1.1 (The Pretty Scary Update): Moved websites.html to the navigation bar, Added update log, better animations, increased quality of images, increased background loading time, and bug fixes.
 
-V1.2 (Redstone Update): Revamped Links Tab, increased loading speed by reducing file sizes, fixed background not fitting screen size, removed schoology from links
+V1.2 (Redstone Update): Revamped Links Tab, increased loading speed by reducing file sizes, fixed background not fitting screen size, removed schoology from links.
 
-V1.3 (The Horse Update): Removed Games Site, Added way cooler animations, added footer, removed ability to select elements, changed "About Me" tab to "About", and added IT2040 to "Websites" tab,</textarea>
+V1.3 (The Horse Update): Removed Games Site, Added way cooler animations, added footer, removed ability to select elements, changed "About Me" tab to "About", and added IT2040 to "Websites" tab.</textarea>
             </form>      
         </div>
 </body>
