--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <body>
         <div id="gradient"></div>
         <div id="card">
-            <h2 id="back"><a href="home.html">Click to go back</a></h2>
+            <h2 id="back"><a href="home">Click to go back</a></h2>
             <br><br><br>
             <img src="Images/icon2.png"/>
             <h1><u>Daniel Mitchell</u></h1>
