--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <main>
     <nav>
         <div class="logo">
-            <p>Daniel Mitchell <span id="DEVELOPER"">(DEV)</span></p>
+            <p>Daniel Mitchell <span id="DEVELOPER""></span></p>
         </div>
         <ul>
             <li><a href="home">Home</a></li>
