--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Daniel | Home</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" type="image/x-icon" href="Images/icon3.png">   
+    <link rel="icon" type="image/x-icon" href="Images/icon3.png">
+    <meta name="description" content="Daniel Mitchell's Site for Web Development">
 </head>
 <body id="background">
     <div class="notice">
