--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
     <meta name="description" content="Daniel Mitchell's Site for Web Development">
-    <meta name="image" content="url(Images/icon2.png)">
+    <meta property="og:url" content="icon2.png">
 </head>
 <body id="background">
     <div class="notice">
