--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 <p>Daniel Mitchell <span id="DEVELOPER"></span></p>
             </div>
             <ul>
-                <li><a href="sparksl.github.io">Home</a></li>
+                <li><a href="sparkpixel.github.io">Home</a></li>
                 <li><a href="videos">Videos</a></li>
                 <li><a href="links">Links</a></li>
                 <li><a href="websites">Websites</a></li>
