--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
+	<meta name="google-adsense-account" content="ca-pub-5979964963400520">
     </head>
     <body id="background">
         <div class="notice">
