--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
     <meta name="description" content="Daniel Mitchell's Site for Web Development">
     <meta property="og:url" content="icon2.png">
+    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
 </head>
 <body id="background">
     <div class="notice">
