--- a/links.html
+++ b/links.html
@@ -5,6 +5,7 @@
     <title>Daniel | Links</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
+    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
 </head>
 <body id="background">
     <div class="notice">
