--- a/videos.html
+++ b/videos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
+    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
 </head>
 <main>
 <body id="background">
