--- a/IT2040/index.html
+++ b/IT2040/index.html
@@ -4,6 +4,7 @@
 <title>Daniel's IT240 Portfolio 2023-2024</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
 </head>
 <body>
 <header class="header">
