--- a/First/first.html
+++ b/First/first.html
@@ -5,6 +5,7 @@
          <link rel="stylesheet" type="text/css" href="first.css">
          <link rel="icon" type="image/x-icon" href="Images/icon3.png">
          <meta charset="UTF-8">
+         <meta name="google-adsense-account" content="ca-pub-5979964963400520">
       </head>
       <body>
   <h1 style="color:blue;">Hello World</h1>
