--- a/First/first.html
+++ b/First/first.html
@@ -6,6 +6,7 @@
          <link rel="icon" type="image/x-icon" href="Images/icon3.png">
          <meta charset="UTF-8">
          <meta name="google-adsense-account" content="ca-pub-5979964963400520">
+         <script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
       </head>
       <body>
   <h1 style="color:blue;">Hello World</h1>
