--- a/IT2040/index.html
+++ b/IT2040/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="google-adsense-account" content="ca-pub-5979964963400520">
+    <script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 </head>
 <body>
 <header class="header">
