--- a/about.html
+++ b/about.html
@@ -5,52 +5,31 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
-	<meta name="google-adsense-account" content="ca-pub-5979964963400520">
-	<script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5979964963400520"
-     crossorigin="anonymous"></script>
     </head>
-    <body id="background">
-        <div class="notice">
-            <a href="https://docs.google.com/document/d/1P9RjQQUpYu6HiYocX_ddAMOUhSCzITAbIefJMq_l-Uo/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>NOTICE: All images are either under a creative commons license or were created by me.</h4></a>
-            </div>
-        <nav>
-            <div class="logo">
-                <p>Daniel Mitchell <span id="DEVELOPER"></span></p>
-            </div>
-            <ul>
-                <li><a href="sparkpixel.github.io">Home</a></li>
-                <li><a href="videos">Videos</a></li>
-                <li><a href="links">Links</a></li>
-                <li><a href="websites">Websites</a></li>
-                <li><a href="about">About</a></li>
-            </ul>
-        </nav>
+    <body style="background-repeat: repeat; background-size:contain;">
         <div id="gradient"></div>
         <div id="card">
             <br><br><br>
-            <img src="Images/icon2.png" alt="icon">
-            <h1><u>Daniel Mitchell</u></h1>
+            <img src="Images/icon2.png" alt="icon" id="abouticon">
+            <h1><u>Daniel <br>Mitchell</u></h1>
             <p class="p">[ Daniel | He/Him ] </p>
             <p class="p">Professional nerd from Kentucky.</p>
-            <p class="p">I love programming, video games, and making YouTube videos.</p>
-            <p class="p">You can normally find me editing youtube videos or playing games with my friends.</p>
+            <p class="p">I love programming, video games,<br>and making YouTube videos.</p>
+            <p class="p">You can normally find me editing <br>youtube videos or playing games <br>with my friends.</p>
             <br>
             <form class="form">
-                <h4 id="recieve">Recieve Updates</h4>
-                <label>Form:</label><br>
+                <h4 id="receive">Recieve Updates</h4>
                 <input type="text" name="email" value="Email"><br>
                 <input type="text" name="name" value="Name">
                 <input type="text" name="phonenumber" value="Phone Number">
-                <input type="text" name="name" value="Like the site?"><br><br>
+                <input type="text" name="name" value="Do you like the site?"><br><br>
                 <input type="submit" value="Submit">
               </form>
-              <div class="version">
-                <h3> <a href="updatelog">
-                    v1.6
-                </a>
-                </h3> 
             </div>
+            <div class="vbuttoncontainer">
+                <a class="vbutton" href="updatelog.html">
+                    <span>v1.7</span>
+                </a>
             </div>
         <footer>
             <h3>Optimized for 1440x900</h3>
