--- a/index.html
+++ b/index.html
@@ -7,28 +7,25 @@
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
     <meta name="description" content="Daniel Mitchell's Site for Web Development">
     <meta property="og:url" content="icon2.png">
-    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
-    <script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5979964963400520"
-     crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body id="background">
-    <div class="notice">
-        <a href="https://docs.google.com/document/d/1P9RjQQUpYu6HiYocX_ddAMOUhSCzITAbIefJMq_l-Uo/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>NOTICE: All images are either under a creative commons license or were created by me.</h4></a>
-        </div>
+<body style="background-repeat: repeat; background-size:contain;">
     <main>
-    <nav id="navbar">
-        <div class="logo">
-            <p>Daniel Mitchell <span id="DEVELOPER"></span></p>
+        <div class="topnav">
+    
+            <div class="topnav-centered">
+                <a href="index.html">Home</a>
+                <a href="videos.html">Video</a>
+                <a href="websites.html">Websites</a>
+            </div>
+
+            <a href="links.html">Links</a>
+
+    <div class="topnav-right">
+            <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
         </div>
-        <ul>
-            <li><a href="sparkpixel.github.io">Home</a></li>
-            <li><a href="videos">Videos</a></li>
-            <li><a href="links">Links</a></li>
-            <li><a href="websites">Websites</a></li>
-            <li><a href="about">About</a></li>
-        </ul>
-    </nav>
+
+    </div>
 <div class="centered">
 <h1>Welcome to</h1>
 </div>
@@ -38,13 +35,14 @@
     </h1>
 </div>
 <img id="homeicon" src="Images/icon.png" alt="icon">
-<div class="version">
-    <h3> <a href="updatelog">
-        v1.6
+<div class="vbuttoncontainer">
+    <a class="vbutton" href="updatelog.html">
+        <span>v1.7</span>
     </a>
-    </h3> 
 </div>
 </main>
-<footer><h3>Optimized for 1440x900</h3></footer>
+<footer>
+    <small>Copyright © SparkPixel Inc.</small>
+    </footer>
 </body>
 </html>
