--- a/links.html
+++ b/links.html
@@ -5,57 +5,41 @@
     <title>Daniel | Links</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
-    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
-    <script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5979964963400520"
-     crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body id="background">
-    <div class="notice">
-        <a href="https://docs.google.com/document/d/1P9RjQQUpYu6HiYocX_ddAMOUhSCzITAbIefJMq_l-Uo/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>NOTICE: All images are either under a creative commons license or were created by me.</h4></a>
-        </div>
+<body style="background-repeat: repeat; background-size:contain;">
     <main>
 <a href="https://www.youtube.com/@SparkPixels" target="_blank" rel="noopener noreferrer">
-    <img src="Images/link.png" alt="youtube" id="youtube-icon">
-    <img src="Images/link2.png" alt="mail" id="hoveryoutube-icon">
+    <img src="Images/YouTube Link.png" alt="youtube" id="youtube-icon">
 </a>
 <a href="https://github.com/Sparksl/" target="_blank" rel="noopener noreferrer">
-    <img src="Images/link.png" alt="github" id="github-icon">
-    <img src="Images/link2.png" alt="mail" id="hovergithub-icon">
+    <img src="Images/Github Link.png" alt="github" id="github-icon">
 </a>
 <a href="mailto:daniel.mitchell@stu.fortthomas.kyschools.us" target="_blank" rel="noopener noreferrer">
-    <img src="Images/link.png" alt="mail" id="email-icon">
-    <img src="Images/link2.png" alt="mail" id="hoveremail-icon">
+    <img src="Images/Email Link.png" alt="email" id="email-icon">
 </a>
-    <nav>
-        <div class="logo">
-            <p>Daniel Mitchell <span id="DEVELOPER"></span></p>
-        </div>
-        <ul>
-            <li><a href="sparkpixel.github.io">Home</a></li>
-            <li><a href="videos">Videos</a></li>
-            <li><a href="links">Links</a></li>
-            <li><a href="websites">Websites</a></li>
-            <li><a href="about">About</a></li>
-        </ul>
-    </nav>
+<div class="topnav">
+    
+    <div class="topnav-centered">
+        <a href="index.html">Home</a>
+        <a href="videos.html">Video</a>
+        <a href="websites.html">Websites</a>
+    </div>
+
+    <a href="links.html">Links</a>
+
+<div class="topnav-right">
+    <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
+</div>
+
+</div>
     <div class="links">
         <h1>Links</h1>
         </div>
-        <div class="youtubelink">
-            <h1>YouTube</h1>
-            </div>
-            <div class="githublink">
-                <h1>Github</h1>
-                </div>
-                <div class="emaillink">
-                    <h1>eMail</h1>
-                    </div>
-                    <div class="version">
-                        <h3> <a href="updatelog">
-                            v1.6
+                    <div class="vbuttoncontainer">
+                        <a class="vbutton" href="updatelog.html">
+                            <span>v1.7</span>
                         </a>
-                        </h3>
                     </div>
                 </main>
                     <footer>
