--- a/updatelog.html
+++ b/updatelog.html
@@ -4,28 +4,24 @@
     <title>Daniel | Updates</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" type="image/x-icon" href="Images/icon3.png">  
-    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
-    <script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5979964963400520"
-     crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="Images/icon3.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body id="background">
-    <nav>
-        <div class="logo">
-            <p>Daniel Mitchell <span id="DEVELOPER"></span></p>
+<body style="background-repeat: repeat; background-size:contain;">
+    <div class="topnav">
+    
+        <div class="topnav-centered">
+            <a href="index.html">Home</a>
+            <a href="videos.html">Video</a>
+            <a href="websites.html">Websites</a>
         </div>
-        <ul>
-            <li><a href="sparkpixel.github.io">Home</a></li>
-            <li><a href="videos">Videos</a></li>
-            <li><a href="links">Links</a></li>
-            <li><a href="websites">Websites</a></li>
-            <li><a href="about">About</a></li>
-        </ul>
-    </nav>
-    <div class="notice">
-        <a href="https://docs.google.com/document/d/1P9RjQQUpYu6HiYocX_ddAMOUhSCzITAbIefJMq_l-Uo/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>NOTICE: All images are either under a creative commons license or were created by me.</h4></a>
-        </div>
+
+        <a href="links.html">Links</a>
+
+<div class="topnav-right">
+        <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
+    </div>
+</div>
     <div class="content">
                     <table>
                         <thead>
@@ -36,7 +32,8 @@
                                 <th>v1.3 (The Animations Update)<br><br><br>6 Edits</th>
                                 <th>v1.4 (The Optimizations Update)<br><br><br>13 Edits</th>
                                 <th>v1.5&nbsp;(The Graphics Update)<br><br><br>9 Edits</th>
-                                <th>v1.6 (The Requirements Update)<br><br><br>11 Edits</th>
+                                <th>v1.6 (The Requirements Update)<br><br><br>13 Edits</th>
+                                <th>v1.7 (The Responsive Update)<br><br><br>10+ Edits</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -48,6 +45,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Transition added over version text</span><br></td>
                                 <td>&nbsp;Fixed GitHub link not working</td>
                                 <td>&nbsp;Revamped update log to add a table</td>
+                                <td>&nbsp;Made every page responsive</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -57,6 +55,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Improved page load animations</span><br></td>
                                 <td>&nbsp;Slightly changed update log format</td>
                                 <td>&nbsp;Replaced Twitch with Email in links</td>
+                                <td>&nbsp;Changed updates text to a button</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -66,6 +65,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Updated "Websites" text to new animation</span><br></td>
                                 <td>&nbsp;Removed elements that violated copyright</td>
                                 <td>&nbsp;Replaced most fonts</td>
+                                <td>&nbsp;Removed creative commons note</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -75,6 +75,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Increased "Websites" text height</span><br></td>
                                 <td>&nbsp;Revamped design of the site</td>
                                 <td>&nbsp;Replaced projects tab with videos tab</td>
+                                <td>&nbsp;Changed videos tab.</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -84,6 +85,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Made bottom left text show optimizations</span><br></td>
                                 <td>&nbsp;Added meta site description</td>
                                 <td>&nbsp;Changed links images to remove scripting</td>
+                                <td>&nbsp;Updated styling for the form</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -93,6 +95,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">Added a secret</span><br></td>
                                 <td>&nbsp;Slightly changed icon coloring in links tab</td>
                                 <td>&nbsp;Added form to about page</td>
+                                <td>&nbsp;Changed icons of links tab</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -102,6 +105,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">Changed the "About" tab slightly&nbsp;</span><br></td>
                                 <td>&nbsp;Removed page load animation for version</td>
                                 <td>&nbsp;Changed aspects of about page to removed scripting</td>
+                                <td>&nbsp;Redid navbar</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -110,7 +114,8 @@
                                 <td>&nbsp;</td>
                                 <td><span style="font-style: normal; font-weight: 400;">Made update log much easier to read&nbsp;</span><br></td>
                                 <td>&nbsp;Slightly changed the version text</td>
-                                <td>&nbsp;Added background & nav bar to about page</td>
+                                <td>&nbsp;Added background & nav bar to about and update pages</td>
+                                <td>&nbsp;Changed styling of the update log</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -120,6 +125,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Deleted "scripts.js" file</span><br></td>
                                 <td>&nbsp;Slightly changed icon.png</td>
                                 <td>&nbsp;Added copyright notice in top left</td>
+                                <td>&nbsp;Changed styling for the websites page.</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -129,6 +135,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Greatly reduced image file sizes</span><br></td>
                                 <td>Greatly compressed image files&nbsp;</td>
                                 <td>&nbsp;Removed bottom part of about page</td>
+                                <td>&nbsp;Removed navbar from the about page.</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -138,6 +145,7 @@
                                 <td><span style="font-style: normal; font-weight: 400;">&nbsp;Removed unnecessary lines of code</span><br></td>
                                 <td>&nbsp;</td>
                                 <td>&nbsp;Added !DOCTYPE html to all pages</td>
+                                <td>&nbsp;Changed a lot of other things</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -146,7 +154,7 @@
                                 <td>&nbsp;</td>
                                 <td><span style="font-style: normal; font-weight: 400;">Added load animation for version text&nbsp;</span>&nbsp;</td>
                                 <td>&nbsp;</td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;Removed unnecessary lines of code</td>
                             </tr>
                             <tr>
                                 <td>&nbsp;</td>
@@ -155,10 +163,15 @@
                                 <td>&nbsp;</td>
                                 <td>Named updates<br></td>
                                 <td>&nbsp;</td>
-                                <td>&nbsp;</td>
+                                <td>&nbsp;Changed home.html to index.html</td>
                             </tr>
                         </tbody>
                     </table>
+                    <div class="vbuttoncontainer">
+                        <a class="vbutton" href="updatelog.html">
+                            <span>v1.7</span>
+                        </a>
+                    </div>
         </div>
 </body>
 </html>
