--- a/videos.html
+++ b/videos.html
@@ -1,48 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Daniel | Videos</title>
+    <title>Daniel | Video</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="Images/icon3.png">
-    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
-    <script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5979964963400520"
-     crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<main>
-<body id="background">
-    <div class="notice">
-        <a href="https://docs.google.com/document/d/1P9RjQQUpYu6HiYocX_ddAMOUhSCzITAbIefJMq_l-Uo/edit?usp=sharing" target="_blank" rel="noopener noreferrer"><h4>NOTICE: All images are either under a creative commons license or were created by me.</h4></a>
+<body style="background-repeat: repeat; background-size:contain;">
+    <div class="topnav">
+    
+        <div class="topnav-centered">
+            <a href="index.html">Home</a>
+            <a href="videos.html">Video</a>
+            <a href="websites.html">Websites</a>
         </div>
-    <nav>
-        <div class="logo">
-            <p>Daniel Mitchell <span id="DEVELOPER"></span></p>
-        </div>
-        <ul>
-            <li><a href="sparkpixel.github.io">Home</a></li>
-            <li><a href="videos">Videos</a></li>
-            <li><a href="links">Links</a></li>
-            <li><a href="websites">Websites</a></li>
-            <li><a href="about">About</a></li>
-        </ul>
-    </nav>
-    <div class="my">
-        <h1>My</h1>
-        </div>
-        <div class="videos">
-            <h1>Videos</h1>
-        </div>
-        <iframe id="video" src="https://www.youtube.com/embed/WRXiBw2xw5o" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <iframe id="video2" src="https://www.youtube.com/embed/kk1JzP7NJq0" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <h3> <a href="updatelog">
-        v1.6
-    </a>
-    </h3>
+        <a href="links.html">Links</a>
+
+<div class="topnav-right">
+        <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
+    </div>
+
 </div>
-</main>
+        <div id="videos">
+        <div class="responsivevid1">
+        <iframe id="video" src="https://www.youtube.com/embed/I0luYLlQ9QA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+</div>
+<div class="vbuttoncontainer">
+    <a class="vbutton" href="updatelog.html">
+        <span>v1.7</span>
+    </a>
+</div>
 <footer>
-    <h3>Optimized for 1440x900</h3>
+    <h3>Copyright © SparkPixel Inc.</h3>
 </footer>
 </body>
 </html>
