--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
               </form>
             </div>
             <div class="vbuttoncontainer">
-                <a class="vbutton" href="updatelog.html">
+                <a class="vbutton" href="updatelog">
                     <span>v1.7</span>
                 </a>
             </div>
