--- a/updatelog.html
+++ b/updatelog.html
@@ -11,15 +11,15 @@
     <div class="topnav">
     
         <div class="topnav-centered">
-            <a href="index.html">Home</a>
-            <a href="videos.html">Video</a>
-            <a href="websites.html">Websites</a>
+            <a href="index">Home</a>
+            <a href="videos">Video</a>
+            <a href="websites">Websites</a>
         </div>
 
-        <a href="links.html">Links</a>
+        <a href="links">Links</a>
 
 <div class="topnav-right">
-        <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
+        <a href="about" target="_blank" rel="noopener noreferrer">About</a>
     </div>
 </div>
     <div class="content">
@@ -168,7 +168,7 @@
                         </tbody>
                     </table>
                     <div class="vbuttoncontainer">
-                        <a class="vbutton" href="updatelog.html">
+                        <a class="vbutton" href="updatelog">
                             <span>v1.7</span>
                         </a>
                     </div>
