--- a/videos.html
+++ b/videos.html
@@ -11,9 +11,9 @@
     <div class="topnav">
     
         <div class="topnav-centered">
-            <a href="index.html">Home</a>
-            <a href="videos.html">Video</a>
-            <a href="websites.html">Websites</a>
+            <a href="index">Home</a>
+            <a href="videos">Video</a>
+            <a href="websites">Websites</a>
         </div>
         <a href="links.html">Links</a>
 
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="vbuttoncontainer">
-    <a class="vbutton" href="updatelog.html">
+    <a class="vbutton" href="updatelog">
         <span>v1.7</span>
     </a>
 </div>
