--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="websites">Websites</a>
             </div>
 
-            <a href="links.html">Links</a>
+            <a href="links">Links</a>
 
     <div class="topnav-right">
             <a href="about" target="_blank" rel="noopener noreferrer">About</a>
