--- a/videos.html
+++ b/videos.html
@@ -15,10 +15,10 @@
             <a href="videos">Video</a>
             <a href="websites">Websites</a>
         </div>
-        <a href="links.html">Links</a>
+        <a href="links">Links</a>
 
 <div class="topnav-right">
-        <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
+        <a href="about" target="_blank" rel="noopener noreferrer">About</a>
     </div>
 
 </div>
