--- a/IT2040/index.html
+++ b/IT2040/index.html
@@ -4,10 +4,7 @@
 <title>Daniel's IT240 Portfolio 2023-2024</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
-    <meta name="google-adsense-account" content="ca-pub-5979964963400520">
-    <script async src="https://fundingchoicesmessages.google.com/i/pub-5979964963400520?ers=1" nonce="RC2R80HaUpIgLZPlnNA-9g"></script><script nonce="RC2R80HaUpIgLZPlnNA-9g">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5979964963400520"
-     crossorigin="anonymous"></script>
+<link rel="icon" type="image/x-icon" href="../Images/icon3.png">
 </head>
 <body>
 <header class="header">
@@ -19,7 +16,7 @@
     <li class="nav"><a href="https://www.youtube.com/@SparkPixels">This is my YouTube</a></li>
   </ol>
 </nav>
-<img src="me.png" alt="daniel" height="300" width="500">
+<img src="me.png" alt="me" height="300" width="500">
 <h3>Green Pastures Case Study Labs</h3>
 <ul>
         <li> <a href="https://www.uc.edu/">
