--- a/links.html
+++ b/links.html
@@ -21,7 +21,7 @@
 <div class="topnav">
     
     <div class="topnav-centered">
-        <a href="index">Home</a>
+        <a href="sparkpixel.github.io">Home</a>
         <a href="videos">Video</a>
         <a href="websites">Websites</a>
     </div>
