--- a/updatelog.html
+++ b/updatelog.html
@@ -13,7 +13,7 @@
         <div class="topnav-centered">
             <a href="index">Home</a>
             <a href="videos">Video</a>
-            <a href="websites">Websites</a>
+            <a href="sparkpixel.github.io">Websites</a>
         </div>
 
         <a href="links">Links</a>
