--- a/links.html
+++ b/links.html
@@ -29,7 +29,7 @@
     <a href="links">Links</a>
 
 <div class="topnav-right">
-    <a href="about.html" target="_blank" rel="noopener noreferrer">About</a>
+    <a href="about" target="_blank" rel="noopener noreferrer">About</a>
 </div>
 
 </div>
